Navbar fixed on mobile
There was a problem with navbar that was disappearing whenever scrolled
down on mobile on Chrome browser. It seemed to look ok in Firefox and
their dev tools. After more investigation it turned out that on the
mobile view in Chrome there is an overflow and the whole screen does
not fit in the window. In the process of debugging (removing sections,
removing different CSS properties etc.) it turned out that some sections
cause the problem. Some items were to big or had additional wrappers or
paddings that caused the overflow. Items fixed: the price name for the
last item in 'Pricing' was too big; the download icons and the
descriptions had too much padding; the form in the 'Contact' sections
was wrapped in an additional div with the class of row, which stretched
it more; too many elements on the footer.

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+  }
+
 html {
     scroll-behavior: smooth;
   }
@@ -6,7 +10,6 @@ html {
 
 .navbar-brand {
     width: 50%;
-    height: 50%;
 }
 
 /*-----------------------------------------------------------------------------*/
@@ -14,6 +17,7 @@ html {
     background-color: white;
     justify-content: center;
     padding: 0;
+    width: 100vw;
 }
 
 .navbar > * {
@@ -29,7 +33,7 @@ html {
 #home {
     margin: 5rem 0 0 0;
     padding: 0;
-    max-width: 100%;
+    max-width: 100vw;
 
 }
 
@@ -48,9 +52,10 @@ html {
     height: 90%;
 }
 
-form {
-    width: 100%;
+#download > div {
+    padding: 0;
 }
+
 
 #fcols div {
     padding: 0 5px; 
@@ -76,9 +81,6 @@ form {
         height: 50%;
     }
 
-    .navbar > * {
-        margin: 0 20px;
-    }
 
     .navbar {
         justify-content: center;
